--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.ButtonColorChangeApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.ButtonColorChangeApp" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -12,5 +12,15 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+    </style>
+
+
+    <style name="MySplash" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenAnimatedIcon">@drawable/app_icon_without_an_icon_background</item>
+        <!--    Here   windowSplashScreenBrandingImage work target api S(Api 31) <=  -->
+        <item name="android:windowSplashScreenBrandingImage" tools:targetApi="s">@drawable/app_banner_without_background</item>
+        <item name="windowSplashScreenBackground">#fff</item>
+        <item name="windowSplashScreenAnimationDuration">2000</item>
+        <item name="postSplashScreenTheme">@style/Theme.ButtonColorChangeApp</item>
     </style>
 </resources>
